@@ -17,7 +17,6 @@ package au.gov.asd.tac.constellation.graph.visual.plugins.select;
 
 import au.gov.asd.tac.constellation.graph.GraphWriteMethods;
 import static au.gov.asd.tac.constellation.graph.visual.plugins.select.SelectUtilities.selectTransactions;
-import static au.gov.asd.tac.constellation.graph.visual.plugins.select.SelectUtilities.selectVertices;
 import au.gov.asd.tac.constellation.plugins.Plugin;
 import au.gov.asd.tac.constellation.plugins.PluginInfo;
 import au.gov.asd.tac.constellation.plugins.PluginInteraction;
@@ -33,17 +32,16 @@ import org.openide.util.lookup.ServiceProvider;
 /**
  * Select all vertices and transactions.
  *
- * @author algol
+ * @author Quasar985
  */
 @ServiceProvider(service = Plugin.class)
 @PluginInfo(pluginType = PluginType.SELECTION, tags = {PluginTags.SELECT})
-@Messages("SelectAllPlugin=Add to Selection: All")
-public class SelectAllPlugin extends SimpleEditPlugin {
+@Messages("SelectTransactionsPlugin=Add to Selection: Transactions")
+public class SelectTransactionsPlugin extends SimpleEditPlugin {
 
     @Override
     public void edit(final GraphWriteMethods graph, final PluginInteraction interaction, final PluginParameters parameters) throws InterruptedException {
         final Properties properties = new Properties();
-        selectVertices(graph, properties);
         selectTransactions(graph, properties);
 
         ConstellationLogger.getDefault().pluginProperties(this, properties);
