@@ -1,6 +1,10 @@
 == 3030-12-31 Getting Started
 <p>If you're new to Constellation, read the <a href="" helpId="au.gov.asd.tac.constellation.functionality.gettingstarted">getting started guide</a>.</p>
 
+
+== 2024-06-03 Select Nodes and Select Transactions
+<p>Users can now more easily select all nodes or select all transactions from a graph. These new actions can be found in the "Selection" menu.</p>
+
 == 2024-05-28 Pages in the Conversation View
 <p>Pages have been added to the Conversation View to help with the loading and viewing of Conversations. The page numbers and arrows at the bottom of the view can be used to change between pages.</p>
 <p>A dropdown list has been added to the top of the view to select how many Conversation bubbles to display per page.</p>
